simple bugfix